--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
+    "cloudinary-react": "^1.8.1",
     "cookie": "^0.6.0",
+    "firebase": "^10.11.1",
     "jquery": "^3.7.1",
     "js": "^0.1.0",
     "react": "^18.2.0",
@@ -18,8 +21,11 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "react-toastify": "^10.0.4",
+    "react-simple-chatbot": "^0.6.1",
+    "react-speech-recognition": "^3.10.0",
+    "react-toastify": "^10.0.5",
     "redux": "^4.2.1",
+    "styled-components": "^4.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
